# bounce-api

./: DEPLOY_COMMANDS.txt  Dockerfile  GEOCODING_ENHANCEMENTS.md  GEOCODING_INTEGRATION.md  INTEGRATION_SUMMARY.md  QUICK_START.md  RUN_THIS_TO_DEPLOY.sh  TOKEN_REFRESH_GUIDE.md  deploy_railway.sh  main.py  nixpacks.toml  railway_env_vars.txt  requirements.txt  start_media_server.sh  startup.py  test_geocoding_integration.py
.cwk/: history  memory.json
api/: dependencies.py
api/routes/: admin.py  auth.py  bounce_share.py  bounces.py  checkins.py  close_friends.py  featured.py  geocoding.py  images.py  instagram_verify.py  likes.py  livestream.py  locations.py  matching.py  messages.py  nearby.py  notifications.py  posts.py  suggestions.py  users.py  venue_feed.py  websocket.py
archived/media_server_node/: .dockerignore  .env.example  .gitignore  config.json  docker-compose.yml  package.json  railway.toml
archived/media_server_node/src/: HttpServer.ts  MediasoupHandler.ts  RoomManager.ts  WebSocketServer.ts  config.ts  server.ts  types.ts
core/: config.py
db/: database.py  models.py
db/migrations/: add_guest_is_connected.sql  add_instagram_handle.sql  add_location_sharing.sql  add_posts_place_link.sql  add_privacy_and_geolocation.sql  add_qr_token.sql  add_venue_checkins.sql  add_venue_fields_to_posts.sql  create_bounces_tables.sql
media_server_cpp/: CMakeLists.txt  README.md
media_server_cpp/include/: config.h  http_server.h  room_manager.h  streaming_server.h  webrtc_handler.h
media_server_cpp/src/: config.cpp  http_server.cpp  main.cpp  room_manager.cpp  room_manager_simple.cpp  streaming_server.cpp  webrtc_handler.cpp
media_server_node/: .env.example  Dockerfile  config.json
media_server_node/src/: HttpServer.ts  MediasoupHandler.ts  RoomManager.ts  WebSocketServer.ts  config.ts  server.ts  types.ts
pydantic-llm-mixin/: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml  railway.json  railway.toml
pydantic-llm-mixin/examples/: SOCIAL_MEDIA_PULSE_GUIDE.md  railway_deployment.py  social_media_pulse.py  social_media_pulse_api.py
pydantic-llm-mixin/pydantic-llm-mixin/: .jwt_token  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  pyproject.toml  railway.toml
pydantic-llm-mixin/pydantic-llm-mixin/examples/: GEOCODING_README.md  WIDGET_EMBED_GUIDE.md  basic_usage.py  geocoding_api.py  project_integration_example.toml  railway_deployment.py
pydantic-llm-mixin/pydantic-llm-mixin/examples/static/: demo.html
pydantic-llm-mixin/pydantic-llm-mixin/examples/static/widgets/: map-search.html
pydantic-llm-mixin/pydantic-llm-mixin/src/pydantic_llm_mixin/: __init__.py
pydantic-llm-mixin/pydantic-llm-mixin/src/pydantic_llm_mixin/geocoding/: __init__.py
pydantic-llm-mixin/pydantic-llm-mixin/src/pydantic_llm_mixin/providers/: __init__.py
pydantic-llm-mixin/pydantic-llm-mixin/src/pydantic_llm_mixin/providers/groq/: __init__.py  client.py  models.py
pydantic-llm-mixin/pydantic-llm-mixin/tests/: test_generative_mixin.py
pydantic-llm-mixin/src/pydantic_llm_mixin/: errors.py  factory.py  generative_mixin.py  prompts.py
scripts/: rebuild_db.py  rebuild_railway_db.py  seed_checkins.py  seed_places_cache.py  seed_static_crowd.py
services/: activity_clustering.py  ai_commentator.py  apns_service.py  auth_service.py  cache.py  geofence.py  instagram.py  live_room.py  matching.py  media_server_client.py  profile_agent.py  recommendations.py  redis.py  tasks.py
services/geocoding/: __init__.py  models.py  service.py
services/instagram_2fa/: __init__.py  client.py  models.py  poller.py  service.py
services/places/: autocomplete.py  service.py
templates/: bounce_share.html  chat_panel.html  feed_item.html  user_sheet.html  venue_sheet.html
templates/admin/: base.html
templates/admin/featured/: list.html
templates/admin/users/: map.html
